--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
     "parse": "^1.3.0",
+    "passport": "^0.2.1",
+    "passport-google-oauth": "^0.1.5",
     "serve-favicon": "~2.1.3"
   }
 }
