--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
+    "jsonwebtoken": "^1.1.2",
     "morgan": "~1.3.0",
     "parse": "^1.3.0",
     "passport": "^0.2.1",
