--- a/package.json
+++ b/package.json
@@ -18,5 +18,30 @@
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
     "serve-favicon": "~2.1.3"
+  },
+  "devDependencies": {
+    "del": "^0.1.3",
+    "gulp": "3.8.8",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-cache": "^0.2.4",
+    "gulp-cached": "^1.0.1",
+    "gulp-csso": "^0.2.9",
+    "gulp-filter": "^1.0.2",
+    "gulp-flatten": "0.0.4",
+    "gulp-imagemin": "^1.0.1",
+    "gulp-jade": "^0.8.0",
+    "gulp-jshint": "^1.8.5",
+    "gulp-load-plugins": "^0.7.0",
+    "gulp-ng-annotate": "^0.3.3",
+    "gulp-nodemon": "^1.0.4",
+    "gulp-remember": "^0.2.1",
+    "gulp-sass": "^1.1.0",
+    "gulp-size": "^1.1.0",
+    "gulp-symlink": "^1.1.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-useref": "^1.0.2",
+    "jshint-stylish": "^1.0.0",
+    "map-stream": "^0.1.0",
+    "run-sequence": "^1.0.1"
   }
 }
