--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.6.0",
     "jsonwebtoken": "^1.1.2",
     "morgan": "~1.3.0",
+    "node-bourbon": "^1.2.3",
     "parse": "^1.3.0",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
